# lambda

./: .gitmodules  CMakeLists.txt  Makefile  main.cpp
data/: prelude.lam
lib/lang_tools/eval/: eval.hpp
lib/lang_tools/lexer/: lexer.hpp
lib/lang_tools/parse/: parse.hpp
lib/lang_tools/repl/: REPL.hpp
lib/lang_tools/utils/: utils.cpp  utils.h
lib/result/: Result.hpp
src/: eval.cpp  eval.h  helpers.cpp  helpers.h  lex.cpp  lex.h  numerals.cpp  numerals.h  parse.cpp  parse.h  prelude.cpp  prelude.h
test/: lambda_tests.cpp  prelude_tests.cpp  run_tests.cpp  shared.cpp  shared_tests.h
